修改数据库模式

--- a/web/guest.html
+++ b/web/guest.html
@@ -335,7 +335,7 @@
 								{{item.teamName}}
 							</td>
 							<td>
-								{{item.teamSize}}
+								{{item.guestList.length}}
 							</td>
 							<td>
 								{{item.guestList.map(item => item.guestName).join("，")}}
